@@ -1,0 +1,5 @@
+#!/bin/sh
+
+./autotool.sh
+./configure $@
+
